<resources>
    <string name="app_name">CamMaster</string>
    <string name="cam_master">CamMaster</string>
    <string name="no_data_found">No Data Found</string>>
    <string name="about">About</string>
    <string name="camera">Camera</string>
    <string name="files">Files</string>
    <string name="name_your_doc">Name your DOC</string>
    <string name="save_as_image">Save as image</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="scanned_images">Scanned Images</string>
    <string name="scanned_pdf">Scanned PDF</string>
    <string name="text_recognition">Image To Text</string>
    <string name="text_recognition_sub">Extract text from image</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_cam_master">Share CamMaster</string>
    <string name="please_press_and_hold_the_text_for_copy">Please press and hold the text for copy and share.</string>
    <string name="ocr_error_message">Image do not contain any text or image quality is not good (OCR scans only English language and latin characters)</string>
    <string name="version">version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="no_internet">No Internet Connected</string>
    <string name="file_name_is_already_exist_please_rename_this_pdf_file">File name is already exist. Enter new name.</string>
    <string name="convert_pdf">Convert PDF</string>
    <string name="settings">Settings</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="light_theme">Light Theme</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enable_app_lock">Enable App Lock</string>
    <string name="search_doc">Search doc</string>
    <string name="camera_click_sound">Camera Click Sound</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="save_qr_code">Save QR code</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="generate">Generate</string>
    <string name="my_qr_codes">My QR Codes</string>
    <string name="scan_qr_or_bar_code">Scan QR\nor bar code</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="clear">Clear</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="transparent_background">Transparent Background</string>
</resources>