<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@color/colorGray">

    <EditText
        android:id="@+id/et_file_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorWhite"
        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm_@."
        android:fontFamily="@font/ubuntu"
        android:hint="@string/name_your_doc"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_save_img"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_background"
        android:drawableStart="@drawable/ic_original"
        android:fontFamily="@font/ubuntu_light"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/save_as_image"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_file_name"
        app:layout_constraintStart_toStartOf="@+id/et_file_name"
        app:layout_constraintTop_toBottomOf="@+id/et_file_name" />

    <Button
        android:id="@+id/btn_save_pdf"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_background"
        android:drawableStart="@drawable/ic_pdf"
        android:fontFamily="@font/ubuntu_light"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/save_as_pdf"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/btn_save_img"
        app:layout_constraintStart_toStartOf="@+id/btn_save_img"
        app:layout_constraintTop_toBottomOf="@+id/btn_save_img" />

</androidx.constraintlayout.widget.ConstraintLayout>