<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.signature.SignatureFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:buttonTint="@color/colorText"
            android:checked="false"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/blue"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:buttonTint="@color/colorText"
            android:checked="true"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/black"
            android:textColor="@color/colorText"
            android:textSize="16sp" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_transparent_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/colorText"
        android:checked="true"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/transparent_background"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/sb_pen_pointer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="4"
        android:thumbTint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/cb_transparent_bg" />

    <TextView
        android:id="@+id/tv_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorCardBack"
        android:fontFamily="@font/ubuntu_medium"
        android:padding="8dp"
        android:text="@string/clear"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/gl_end"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/sb_pen_pointer" />

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:penColor="@android:color/black"
        app:penMaxWidth="3dp"
        app:penMinWidth="1dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_save_button"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signature_pad" />

</androidx.constraintlayout.widget.ConstraintLayout>