<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_qr_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="100dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_qr_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/ubuntu_medium"
        android:hint="@string/enter_text_here"
        android:maxLines="9"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/btn_generate_qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_save_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_save_button"
        android:fontFamily="@font/ubuntu_medium"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/save_qr_code"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_generate_qr_code"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_generate_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_save_button"
        android:fontFamily="@font/ubuntu_medium"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/generate"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_save_qr_code" />


</androidx.constraintlayout.widget.ConstraintLayout>